--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "Maxim Zhukov",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "exif-parser": "^0.1.9"
+  }
 }
