--- a/package.json
+++ b/package.json
@@ -2,17 +2,27 @@
   "name": "photo-renamer",
   "version": "0.0.1",
   "description": "Adds creation date to photos filenames.",
+  "main": "main.js",
+  "scripts": {
+    "start": "electron ."
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/zhukov-maxim/photo-renamer.git"
   },
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
   "author": "Maxim Zhukov",
   "license": "ISC",
+  "devDependencies": {
+    "eslint": "^3.14.0",
+    "eslint-config-airbnb": "^14.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-react": "^6.9.0"
+  },
   "dependencies": {
-    "exif-parser": "^0.1.9"
+    "electron": "^1.4.15",
+    "electron-reload": "^1.1.0",
+    "exif-parser": "^0.1.9",
+    "vue": "^2.1.10"
   }
 }
