--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "electron": "^1.5.0",
+    "electron-config": "^0.2.1",
     "electron-reload": "^1.1.0",
     "exif-parser": "^0.1.9",
     "vue": "^2.1.10"
