--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^3.15.0",
-    "eslint-config-airbnb": "^14.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.2",
-    "eslint-plugin-react": "^6.9.0"
+    "eslint-config-airbnb-base": "^11.1.0",
+    "eslint-plugin-import": "^2.2.0"
   },
   "dependencies": {
     "electron": "^1.5.0",
