--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "electron": "^1.6.1",
     "electron-config": "^0.2.1",
+    "electron-devtools-installer": "^2.1.0",
     "electron-reload": "^1.1.0",
     "exif-parser": "^0.1.9",
     "junk": "^2.0.0",
