--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "electron-devtools-installer": "^2.1.0",
     "electron-reload": "^1.1.0",
     "exif-parser": "0.1.9",
+    "exiftool-vendored": "^8.22.0",
     "junk": "^2.0.0",
     "vue": "^2.1.10"
   }
